# rustnifti

./: .gitignore  Cargo.toml  README.md
src/: header.rs  lib.rs  main.rs
src/mri/: header.rs  img.rs
src/numeric/: calculus.rs  function.rs  interpolate.rs  mod.rs  piecewise.rs  polynomial.rs
src/signals/: frame.rs  mod.rs  series.rs  signal.rs
src/transform/: ft.rs
