[package]
name = "telium"
version = "0.1.2"
authors = ["George Harris"]
description = "Eventually a suite a libraries for medical science"
repository = "http://www.github.com/glfharris/telium"
keywords = ["science", "medical", "medicine"]
license = "MIT"

[[bin]]
name = "main"
doc = false

[dependencies]
nalgebra = "0.5"
num = "0.1"
gnuplot = "*"
